Use GraphPad.net to calculate p value

--- a/Bandit/Bandit.csproj
+++ b/Bandit/Bandit.csproj
@@ -42,6 +42,7 @@
   <ItemGroup>
     <Compile Include="Bandit.cs" />
     <Compile Include="Choice.cs" />
+    <Compile Include="GraphPad.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Tally.cs" />
   </ItemGroup>
